k8s/namespace-2-backend/mood-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mood
  namespace: backend
  labels:
    app: mood
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mood
  template:
    metadata:
      labels:
        app: mood
    spec:
      containers:
        - name: mood
          image: mood:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mood-svc
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: mood
  ports:
    - port: 8080
      targetPort: 8080
      name: http
