k8s/namespace-2-backend/reactions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactions
  namespace: backend
  labels:
    app: reactions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactions
  template:
    metadata:
      labels:
        app: reactions
    spec:
      containers:
        - name: reactions
          image: reactions:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: reactions-svc
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: reactions
  ports:
    - port: 8080
      targetPort: 8080
      name: http
